@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 690990e20ff100545ae087fe46e6df88f368b016 ChangeLog
+SHA1 05ac6d89f5489273d5d7ca15e9e61b3e008aec4c ChangeLog
 SHA1 a74125560a260a18a646ef0b3702e1b77a45b931 LICENSE
 SHA1 076b96a40ee3e10d1bee150578c53821e00014c0 MANIFEST
-SHA1 481cb68f2d7f63e5fbf44a642f09a714d8f944e0 META.yml
-SHA1 dbfae938f686287f25a9506586d738762aad9e25 Makefile.PL
+SHA1 872510ca2ba284aacf585533bf0919ee47288025 META.yml
+SHA1 54702a36abc89a08dc7b53dca52ce851a710811d Makefile.PL
 SHA1 8af1a79720895de6dd7dc0f88ed6e07c20e84f2d README
-SHA1 667396e24a7f2b7f064b9b0995e363d653986812 bin/fullauto.pl
+SHA1 56058fc8d72a96f1cb02917fdf636c1abb94e51d bin/fullauto.pl
 SHA1 20c73697e1713638140c719d8eaa19a275ed43a5 inc/Module/AutoInstall.pm
 SHA1 7305dbe2904416e28decb05396988a5d51d578be inc/Module/Install.pm
 SHA1 ca13d9875e1249f6e84f7070be8152c34837955e inc/Module/Install/AutoInstall.pm
@@ -33,7 +33,7 @@ SHA1 026cc0551a0ad399d195e395b46bdf842e115192 inc/Module/Install/Metadata.pm
 SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
-SHA1 e355c1a900e9dc426802d1efec90469123a6de01 lib/Net/FullAuto.pm
+SHA1 2daf5f5fd89f5fdd27b2669cfbd23f4024ea7ffd lib/Net/FullAuto.pm
 SHA1 5ff6ce13b0ff87967726e71d0ef53ba0b3884ba7 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 1c547d9c70bbd223abf6d28018ca47076501063a lib/Net/FullAuto/Custom/README
 SHA1 c312c49b9b45e407e8deb9b4703e5c2aa8e71fc3 lib/Net/FullAuto/Distro/fa_code.pm
@@ -47,7 +47,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.9 (Cygwin)
 
-iEYEARECAAYFAkyL7fAACgkQdsVAdUjO9Il1XACdEtfvdJwDZugSZEODtUD5p9cX
-5/IAn1gR/2NZtHNOVVR9HQu/nmNLKUL0
-=Zm+/
+iEYEARECAAYFAkyL8ZkACgkQdsVAdUjO9Ik88wCfc6xdCCHV1wxiYVEtYyvocXnT
+cSoAn2twoTWyODJQc7caeDB+qwQ2VlZM
+=Q6po
 -----END PGP SIGNATURE-----
