@@ -34,7 +34,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.42';
+our $VERSION='0.43';
 
 
 use 5.005;
