@@ -24,6 +24,14 @@
 #
 ################################################################
 
+
+2010-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
+
+        * Version 0.43 released.
+
+        * Forgot to include fullauto.pl changes in Version 0.42
+
+
 2010-09-11  Brian M. Kelly  <Brian.Kelly@fullautosoftware.com>
 
         * Version 0.42 released.
